kubernetes/controller/nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31000

  selector:
    app: project
    type: nginx
