kubernetes/controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: "rocksa.kz"
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx-clusterip
                port:
                  number: 80

          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-clusterip
                port:
                  number: 8080
